resolvendo problemas de sonar